scripts/infer_output/InferTaint/tmp/javac.tmp.1f5a1b.out
[parsing started SimpleFileObject[/home/vanguard/projects/SAMutator/src/test/java/codetoanalyze/java/InferTaint.java]]
[parsing completed 11ms]
[loading /modules/java.se/module-info.class]
[loading /modules/java.management.rmi/module-info.class]
[loading /modules/java.sql.rowset/module-info.class]
[loading /modules/java.sql/module-info.class]
[loading /modules/jdk.scripting.nashorn/module-info.class]
[loading /modules/jdk.jshell/module-info.class]
[loading /modules/jdk.crypto.cryptoki/module-info.class]
[loading /modules/java.net.http/module-info.class]
[loading /modules/java.logging/module-info.class]
[loading /modules/jdk.xml.dom/module-info.class]
[loading /modules/jdk.internal.jvmstat/module-info.class]
[loading /modules/java.scripting/module-info.class]
[loading /modules/jdk.naming.rmi/module-info.class]
[loading /modules/jdk.unsupported/module-info.class]
[loading /modules/jdk.naming.dns/module-info.class]
[loading /modules/jdk.localedata/module-info.class]
[loading /modules/jdk.javadoc/module-info.class]
[loading /modules/java.xml/module-info.class]
[loading /modules/jdk.internal.vm.compiler/module-info.class]
[loading /modules/jdk.crypto.ec/module-info.class]
[loading /modules/jdk.management.jfr/module-info.class]
[loading /modules/jdk.zipfs/module-info.class]
[loading /modules/jdk.unsupported.desktop/module-info.class]
[loading /modules/jdk.security.auth/module-info.class]
[loading /modules/jdk.internal.opt/module-info.class]
[loading /modules/jdk.jcmd/module-info.class]
[loading /modules/jdk.internal.vm.compiler.management/module-info.class]
[loading /modules/java.desktop/module-info.class]
[loading /modules/java.prefs/module-info.class]
[loading /modules/jdk.jstatd/module-info.class]
[loading /modules/jdk.jsobject/module-info.class]
[loading /modules/jdk.management/module-info.class]
[loading /modules/jdk.hotspot.agent/module-info.class]
[loading /modules/java.xml.crypto/module-info.class]
[loading /modules/jdk.jartool/module-info.class]
[loading /modules/jdk.jconsole/module-info.class]
[loading /modules/jdk.jdi/module-info.class]
[loading /modules/jdk.pack/module-info.class]
[loading /modules/jdk.accessibility/module-info.class]
[loading /modules/jdk.internal.vm.ci/module-info.class]
[loading /modules/jdk.management.agent/module-info.class]
[loading /modules/jdk.attach/module-info.class]
[loading /modules/java.base/module-info.class]
[loading /modules/java.security.jgss/module-info.class]
[loading /modules/jdk.aot/module-info.class]
[loading /modules/jdk.httpserver/module-info.class]
[loading /modules/jdk.jfr/module-info.class]
[loading /modules/jdk.internal.ed/module-info.class]
[loading /modules/java.compiler/module-info.class]
[loading /modules/java.instrument/module-info.class]
[loading /modules/java.smartcardio/module-info.class]
[loading /modules/jdk.internal.le/module-info.class]
[loading /modules/jdk.rmic/module-info.class]
[loading /modules/jdk.charsets/module-info.class]
[loading /modules/jdk.scripting.nashorn.shell/module-info.class]
[loading /modules/jdk.dynalink/module-info.class]
[loading /modules/jdk.jlink/module-info.class]
[loading /modules/java.rmi/module-info.class]
[loading /modules/jdk.naming.ldap/module-info.class]
[loading /modules/jdk.jdeps/module-info.class]
[loading /modules/jdk.compiler/module-info.class]
[loading /modules/jdk.security.jgss/module-info.class]
[loading /modules/java.transaction.xa/module-info.class]
[loading /modules/jdk.net/module-info.class]
[loading /modules/jdk.sctp/module-info.class]
[loading /modules/jdk.jdwp.agent/module-info.class]
[loading /modules/jdk.editpad/module-info.class]
[loading /modules/java.naming/module-info.class]
[loading /modules/java.datatransfer/module-info.class]
[loading /modules/java.security.sasl/module-info.class]
[loading /modules/java.management/module-info.class]
[search path for source files: .,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/javax.inject.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/guava-23.0.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/android-support-v4.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jsr305-src.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/kotlin-annotations-jvm-1.3.72.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/collection-1.1.0.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jsr305.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jackson-2.2.3.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/android-23.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/tools.jar]
[search path for class files: /home/vanguard/bin/jdk/jdk-11.0.12/lib/modules,.,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/javax.inject.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/guava-23.0.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/android-support-v4.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jsr305-src.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/kotlin-annotations-jvm-1.3.72.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/collection-1.1.0.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jsr305.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/jackson-2.2.3.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/android-23.jar,/home/vanguard/projects/SAMutator/tools/Infer_Dependency/tools.jar]
[loading /modules/java.base/java/lang/Object.class]
[loading /modules/java.base/java/lang/Deprecated.class]
[loading /modules/java.base/java/lang/annotation/Retention.class]
[loading /modules/java.base/java/lang/annotation/RetentionPolicy.class]
[loading /modules/java.base/java/lang/annotation/Target.class]
[loading /modules/java.base/java/lang/annotation/ElementType.class]
[checking codetoanalyze.java.InferTaint]
[loading /modules/java.base/java/io/Serializable.class]
[loading /modules/java.base/java/lang/AutoCloseable.class]
/home/vanguard/projects/SAMutator/src/test/java/codetoanalyze/java/InferTaint.java:11: error: cannot find symbol
    Object o = InferUndefined.object_undefined();
               ^
  symbol:   variable InferUndefined
  location: class InferTaint
[loading ./codetoanalyze/java/InferBuiltins.class]
[total 157ms]
1 error
